Update project documentation and exercises
- Updated mkdocs.yml with new author and repository details.
- Replaced "Roteiros" with "Exercícios" in navigation and added new exercise links.
- Added detailed documentation for exercises 1 to 5, including RESTful API designs and Python code examples.
- Introduced new images and diagrams for exercises.
- Removed outdated Roteiro 1, 2, and 3 documentation files.
- Enhanced exercise 4 with Python code for limit definition and simulation.
- Included Jupyter notebook for exercise 5 with data exploration and preprocessing tasks.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,8 +1,8 @@
 site_name: Template de Entrega
-site_author: Sandmann, H.
-site_url: https://hsandmann.github.io/documentation.template
-repo_url: https://github.com/hsandmann/documentation.template
-repo_name: github/documentation.template
+site_author: Ricardo Luz Carvalho
+site_url: https://RicardolCarvalho.github.io/PlataformasIndv
+repo_url: https://github.com/RicardolCarvalho/PlataformasIndv
+repo_name: github/PlataformasIndv
 
 theme:
   name: material
@@ -110,7 +110,7 @@ plugins:
       enable_creation_date: true
   - git-authors
   - git-committers:
-      repository: hsandmann/hsandmann.github.com
+      repository: RicardolCarvalho/PlataformasIndv
       branch: main
   - search
   - badges
@@ -142,10 +142,10 @@ extra_javascript:
 nav:
   - Home: index.md
   - This documentation: ./thisdocumentation/main.md
-  - Roteiros:
-    - Roteiro 1: ./roteiro1/main.md
-    - Roteiro 2: ./roteiro2/main.md
-    - Roteiro 3: ./roteiro3/main.md
-    - Roteiro 4: ./roteiro4/main.md
-    - Notebook 1: ./notebook1/ex1_data.ipynb
+  - Exercícios:
+    - Exercício 1: ./exercicio1/main.md
+    - Exercício 2: ./exercicio2/main.md
+    - Exercício 3: ./exercicio3/main.md
+    - Exercício 4: ./exercicio4/main.md
+    - Exercício 5: ./exercicio5/main.md
   - Projeto: ./projeto/main.md
