--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,7 +2,7 @@ site_name: Template de Entrega
 site_author: Ricardo Luz Carvalho
 site_url: https://RicardolCarvalho.github.io/PlataformasIndv
 repo_url: https://github.com/RicardolCarvalho/PlataformasIndv
-repo_name: github/PlataformasIndv
+repo_name: RicardolCarvalho/PlataformasIndv
 
 theme:
   name: material
