Update mkdocs configuration with new site details and navigation structure
- Changed site name and URL to reflect the new project focus.
- Updated repository name in mkdocs.yml for consistency.
- Added palette toggles for automatic dark/light mode based on user preference.
- Enhanced navigation structure with new sections for exercises and project documentation.
- Adjusted markdown extensions and plugins for improved functionality and added support for Jupyter notebooks.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,8 +1,8 @@
-site_name: Template de Entrega
+site_name: Plataformas, Microsserviços e APIs
 site_author: Ricardo Luz Carvalho
-site_url: https://RicardolCarvalho.github.io/PlataformasIndv
+site_url: https://RicardolCarvalho.github.io/PlataformasIndv/
 repo_url: https://github.com/RicardolCarvalho/PlataformasIndv
-repo_name: RicardolCarvalho/PlataformasIndv
+repo_name: github/PlataformasIndv
 
 theme:
   name: material
@@ -15,6 +15,13 @@ theme:
         icon: material/toggle-switch-off-outline
         name: Switch to dark mode
 
+    # Palette toggle for automatic mode
+    - media: "(prefers-color-scheme)"
+      primary: grey
+      toggle:
+        icon: material/toggle-switch
+        name: Switch to light mode
+
     # Palette toggle for light mode
     - media: "(prefers-color-scheme: light)"
       scheme: default 
@@ -23,6 +30,13 @@ theme:
         icon: material/toggle-switch-off-outline
         name: Switch to dark mode
 
+    # Palette toggle for dark mode
+    - media: "(prefers-color-scheme: dark)"
+      primary: grey
+      scheme: slate
+      toggle:
+        icon: material/toggle-switch
+        name: Switch to system preference
   features:
     - content.code.copy
     - content.code.select
@@ -33,6 +47,7 @@ theme:
     - navigation.top
     - navigation.path
     - navigation.tracking
+    - navigation.expand
   icon:
     # logo: assets/images/devops
     admonition:
@@ -48,15 +63,12 @@ theme:
       bug: fontawesome/solid/robot
       example: fontawesome/solid/flask
       quote: fontawesome/solid/quote-left
-  # logo: assets/images/devops.png
-  # logo: assets/images/insper.svg
-  logo: assets/images/logo.png
 
 markdown_extensions:
   - admonition
   - attr_list
   - md_in_html
-  - markdown_grid_tables:
+  - markdown_grid_tables
   - pymdownx.arithmatex:
       generic: true
   - pymdownx.details
@@ -75,34 +87,36 @@ markdown_extensions:
         - name: mermaid
           class: mermaid
           format: !!python/name:pymdownx.superfences.fence_code_format
+        - name: python
+          class: python
+          validator: !!python/name:markdown_exec.validator
+          format: !!python/name:markdown_exec.formatter
   - pymdownx.tabbed:
       alternate_style: true
   - pymdownx.tasklist:
-      custom_checkbox: true
+      custom_checkbox: true  
   - footnotes
   - pymdownx.critic
   - pymdownx.caret
   - pymdownx.keys
   - pymdownx.mark
   - pymdownx.tilde
+  - pymdownx.blocks.caption
   - tables
-
-
+      
 plugins:
   - glightbox
   - git-revision-date-localized:
       enable_creation_date: true
   - git-authors
   - git-committers:
-      repository: RicardolCarvalho/PlataformasIndv
+      repository: isavrodrigues/plataform
       branch: main
-      token: !ENV MKDOCS_GIT_COMMITTERS_APIKEY
   - search
+  - badges
   - minify:
       minify_html: true
-  - badges
   - markdown-exec
-  - mkdocs-pdf
   - render_swagger:
       allow_arbitrary_locations : true
   - termynal:
@@ -110,128 +124,28 @@ plugins:
         - "$"
         - ">"
 
+# mkdocs-jupyter
+  - mkdocs-jupyter:
+      execute: false
+      allow_errors: false
+
 extra_javascript:
-  - assets/javascripts/mathjax.js
+  - https://unpkg.com/mathjax/es5/tex-mml-chtml.js
   - https://polyfill.io/v3/polyfill.min.js?features=es6
   - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
+  - https://fastly.jsdelivr.net/npm/jquery/dist/jquery.min.js
+  - https://fastly.jsdelivr.net/npm/echarts/dist/echarts.min.js
 
-extra_css:
-  - assets/stylesheets/extra.css
+  # Para a implementação do mkdocs-jupyter
+  - javascripts/mathjax.js
 
 nav:
-  - Ementa: index.md
-  - 2025.2: versions/2025.2/index.md
-
-  - Classes:
-    - 1. Distributed Systems: classes/distributed-systems/index.md
-    - 2. Containerization: classes/containerization/index.md
-    - 3. Microservices: classes/microservices/index.md
-    - 4. APIs: classes/api/index.md
-    - 5. Architectures: classes/architectures/index.md
-    - 6. DevOps: classes/devops/index.md
-    - 7. Cloud: classes/cloud/index.md
-    - 8. Orchestration: classes/orchestration/index.md
-    - 9. PaaS: classes/paas/index.md
-    - Checkpoints:
-      - 1. CRUD: checkpoints/1/index.md
-      - 2. Gateway: checkpoints/2/index.md
-      - 3. Security: checkpoints/3/index.md
-      - 4. DevOps: checkpoints/4/index.md
-      - 5. Orchestration: checkpoints/5/index.md
-
-  - Exercises:
-    - Individual:
-      - 1. Product API: exercises/product.md
-      - 2. Order API: exercises/order.md
-      - 3. Exchange API: exercises/exchange.md
-      - 4. Jenkins: exercises/jenkins.md
-      - 5. MiniKube: exercises/minikube.md
-      - Bottlenecks: exercises/bottlenecks/bottlenecks.md
-    - Project: exercises/project/project.md
-    
-  - Versions:
-    - Terms and Conditions: versions/terms-and-conditions.md
-    - 2025.2: versions/2025.2/index.md
-    - 2025.1: versions/2025.1/index.md
-    - 2024.1: versions/2024.1/index.md
-  
-  # - Handout:
-  #   - Microservices:
-  #     - Roadmap: ./handout/microservices/roadmap.md
-  #     - Account: ./handout/microservices/account.md
-  #     - Auth: ./handout/microservices/auth.md
-  #     - Discovery: ./handout/microservices/discovery.md
-  #     - Gateway: ./handout/microservices/gateway.md
-  #   - DevOps:
-  #     - Observability: ./handout/devops/observability.md
-  #   #   - Roadmap: ./handout/devops-roadmap.md
-  #     - Jenkins: ./handout/devops/jenkins.md
-  #   #   - Docker: ./handout/devops-docker.md
-  #     - Kubernetes: ./handout/devops/kubernetes.md
-  #   - Cloud:
-  #     - AWS:
-  #       - cli: ./handout/cloud/aws/cli.md
-  #       - eks: ./handout/cloud/aws/eks.md
-  #   - Architecture: ./handout/architecture.md
-  #   - Business: ./handout/business.md
-  # - API:
-  #   - Spring Boot Cloud: ./api/spring-boot-cloud.md
-  #   - Testing: ./api/testing.md
-  #   - Documentation: ./api/documentation.md
-  # - Platform:
-  #   - Concepts: ./platform/concepts.md
-  #   - Microservices: ./platform/microservices.md
-  #   - Discovery: ./platform/discovery.md
-  #   - Gateway: ./platform/gateway.md
-  #   - Config: ./platform/config.md
-  #   - Load Balancing: ./platform/load-balancing.md
-  #   - Circuit Breaker: ./platform/circuit-breaker.md
-  #   - Security:
-  #     - Concepts: ./platform/security/concepts.md
-  #     - JWT: ./platform/security/jwt.md
-  #     - OAuth2: ./platform/security/oauth2.md
-  #     # - Auth Service: ./platform/security/auth-service.md
-  #     # - OpenID: openid.md
-  #     # - SSO: sso.md
-  #   - Communication: ./platform/communcation.md
-  #   - Observability:
-  #     - Monitoring: ./platform/observability/monitoring.md
-  #     - Logging: ./platform/observability/logging.md
-  #     - Tracing: ./platform/observability/tracing.md
-  #   - Messaging: 
-  #     - Concepts: ./platform/messaging/concepts.md
-  #     - Kafka: ./platform/messaging/kafka.md
-  #     - RabbitMQ: ./platform/messaging/rabbitmq.md
-  #   - Database:
-  #     - Flyway: ./platform/database/flyway.md
-  #     - Caching: ./platform/database/caching.md
-  #     # - MongoDB: mongodb.md
-  #     # - Elasticsearch: elasticsearch.md
-  #   - Payment: ./platform/payment.md
-  # - DevOps:
-  #   - Concepts: ./devops/concepts.md
-  #   - Version Control: ./devops/version-control-system.md
-  #   - Docker: ./devops/docker.md
-  #   - Packaging: ./devops/packaging.md
-  #   - Release: ./devops/release.md
-  #   # - Nexus: nexus.md
-  #   # - SonarQube: sonarqube.md
-  #   - Kubernetes: ./devops/kubernetes.md
-  # - Cloud Computing:
-  #   - AWS: ./cloud/aws.md
-  #   - GCP: ./cloud/gcp.md
-  #   - Azure: ./cloud/azure.md
-  #   - GitActions: ./cloud/gitactions.md
-  #   - Terraform: ./cloud/terraform.md
-  # - Business:
-  #   - Concepts: ./business/concepts.md
-  
-  - Appendix:
-    - Development Setup: ./appendix/development-setup/main.md
-    - REST vs GraphQL: ./appendix/rest-vs-graphql.md
-    - Versioning REST APIs: ./appendix/versioning-rest-apis.md
-    - RSA Algorithm: ./appendix/rsa.md
-    - Oh My Zsh: ./appendix/ohmyzsh.md
-    - Others: ./appendix/others.md
-  
-  - Disclaimer: ./disclaimer.md
+  - Home: index.md
+  - This documentation: ./thisdocumentation/main.md
+  - Exercícios:
+    - Exercício 1: ./exercicio1/main.md
+    - Exercício 2: ./exercicio2/main.md
+    - Exercício 3: ./exercicio3/main.md
+    - Exercício 4: ./exercicio4/main.md
+    - Exercício 5: ./exercicio5/main.md
+  - Projeto: ./projeto/main.md
