--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -111,7 +111,7 @@ plugins:
       enable_creation_date: true
   - git-authors
   - git-committers:
-      repository: isavrodrigues/plataform
+      repository: RicardolCarvalho/PlataformasIndv
       branch: main
   - search
   - badges
