Update documentation for exercises with new images and revised titles
- Enhanced mkdocs.yml navigation with descriptive titles for exercises.
- Updated index.md to include completion dates for Roteiro 3.
- Added Postman images to exercises 1, 2, and 3 for better API visualization.
- Removed outdated content from exercise 3 and replaced it with new image references.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -144,9 +144,9 @@ nav:
   - Home: index.md
   - This documentation: ./thisdocumentation/main.md
   - Exercícios:
-    - Exercício 1: ./exercicio1/main.md
-    - Exercício 2: ./exercicio2/main.md
-    - Exercício 3: ./exercicio3/main.md
+    - Exercício 1 - Product: ./exercicio1/main.md
+    - Exercício 2 - Order: ./exercicio2/main.md
+    - Exercício 3 - Exchange: ./exercicio3/main.md
     - Exercício 4: ./exercicio4/main.md
     - Exercício 5: ./exercicio5/main.md
   - Projeto: ./projeto/main.md
