Update exercise documentation with Jenkins integration and remove video links
- Renamed exercise 4 in mkdocs.yml to include "Jenkins" for clarity.
- Expanded exercise 4 documentation to include detailed Jenkins setup and pipeline examples.
- Removed video presentation links from exercises 1, 2, and 3 to streamline content.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -147,6 +147,6 @@ nav:
     - Exercício 1 - Product: ./exercicio1/main.md
     - Exercício 2 - Order: ./exercicio2/main.md
     - Exercício 3 - Exchange: ./exercicio3/main.md
-    - Exercício 4: ./exercicio4/main.md
+    - Exercício 4 - Jenkins: ./exercicio4/main.md
     - Exercício 5: ./exercicio5/main.md
   - Projeto: ./projeto/main.md
