Update Exercise 5 documentation to reflect MiniKube and add Postgres service details, including a new image for MiniKube.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -148,5 +148,5 @@ nav:
     - Exercício 2 - Order: ./exercicio2/main.md
     - Exercício 3 - Exchange: ./exercicio3/main.md
     - Exercício 4 - Jenkins: ./exercicio4/main.md
-    - Exercício 5 - Kubernetes: ./exercicio5/main.md
+    - Exercício 5 - MiniKube: ./exercicio5/main.md
   - Projeto: ./projeto/main.md
